<resources>
    <string name="app_name">Zero Waste</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="btmNav_donation">Donation</string>
    <string name="btmNav_food">Food</string>
    <string name="btmNav_forum">Forum</string>
    <string name="btmNav_team">Team</string>

    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="pickuptime">Pick Up Time</string>
    <string name="btnSubmit">Submit</string>
    <string name="add">Add</string>
    <string name="btnbrowse">Browse Image</string>
    <string name="askbrowse">Please browse a image</string>
    <string name="location">Location:</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="owner_name">Owner: </string>
    <string name="item_name">Item: </string>
    <string name="pickup_time">Pickup time: </string>
    <string name="sendreq">Send Request</string>

    <string name="myreq">My Requests</string>
    <string name="mylisting">My Listing</string>

    <string name="btnApprove">Approve</string>
    <string name="target">Target(RM): </string>
    <string name="donate">DONATE</string>
    <string name="progress">Progress: </string>
    <string name="join">JOIN</string>
</resources>
